<resources>
    <string name="app_name">ReMedi</string>
    <string name="logo_desc">ReMedi Logo</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>
    <string name="email">Email address</string>
    <string name="pass">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signRedirect">Not a user? <u>Sign up</u></string>
    <string name="loginRedirect">Already a user? <u>Log in</u></string>
    <string name="cont">Continue</string>
    <string name="inv">Inventory</string>
    <string name="rem">Reminders</string>
    <string name="notes">Notes</string>
    <string name="chatbot">Report Analysis</string>
    <string name="add_meds">Add Medication</string>
    <string name="med_name">Medication Name</string>
    <string name="hint_med">eg: Paracetamol</string>
    <string name="tot_qty">Total Quantity</string>
    <string name="hint_qty">eg: 30 units</string>
    <string name="dos_qty">Quantity per dose</string>
    <string name="hint_d_qty">eg: 1 unit</string>
    <string name="time">Time of dose</string>
    <string name="hint_time">eg: 12:00</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="patient">Patient</string>
    <string name="guardian">Guardian</string>
    <string name="choose_mode">Choose Mode</string>
</resources>