<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".HomePage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuideline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:fontFamily="@font/rubik"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rem"/>

    <Button
        android:id="@+id/rem"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple"
        android:onClick="RemPage"
        android:text="@string/rem"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintBottom_toTopOf="@id/signButton2"/>

    <Button
        android:id="@+id/signButton2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple"
        android:onClick="InvPage"
        android:text="@string/inv"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rem"
        app:layout_constraintBottom_toTopOf="@id/signButton3"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/signButton3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple"
        android:onClick="LogPage"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signButton2"
        app:layout_constraintBottom_toTopOf="@id/signButton4"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/signButton4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple"
        android:onClick="ChatPage"
        android:text="@string/chatbot"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="120dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signButton3"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
