<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ChooseMode">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintVertical_bias="0.411"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/rubik"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.649" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:text="@string/choose_mode"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/patient"/>


    <Button
        android:id="@+id/patient"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple"
        android:text="@string/patient"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintBottom_toTopOf="@id/guardian"/>

    <Button
        android:id="@+id/guardian"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/purple"
        android:textAlignment="center"
        android:text="@string/guardian"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient"
        app:layout_constraintVertical_bias="0.065" />


</androidx.constraintlayout.widget.ConstraintLayout>